<resources>
    <string name="app_name">Connectivity</string>
    <string name="action_settings">Settings</string>
    <string name="connectivity">车联网</string>
    <string name="connectivity_text">觉醒的滋味每天都在,就像阳光每天都来</string>
    <string name="connectivity_website">www.driverhelper.com</string>
    <string name="input_username"> 请输入用户名</string>
    <string name="inout_password"> 请输入密码</string>
    <string name="forget">忘记密码？</string>
    <string name="login">登 录</string>
    <string name="nologin">无法登录？</string>
    <string name="registered">注 册</string>
    <string name="registered_success">注册成功</string>
    <string name="revise_success">修改成功</string>
    <string name="registered_success1">将在1秒后返回主页</string>
    <string name="submit">提 交</string>
    <string name="username"> 用户名</string>
    <string name="password"> 密 码</string>
    <string name="newpassword">新密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="revise_password">修改密码</string>
    <string name="newuser">新用户注册</string>
    <string name="ask">我已阅读并同意</string>
    <string name="rule">服务条款</string>
    <string name="rule1">隐私条款</string>
    <string name="email">邮 箱</string>
    <string name="phonenumber">手机号码</string>
    <string name="captcha">验证码</string>
    <string name="send">发送</string>
    <string name="captcha_send">获取验证码</string>
    <string name="username_tip"> 请输入7~18个字符</string>
    <string name="password_tip"> 请输入字母，数字和符号</string>
    <string name="repassword_tip"> 再次输入密码</string>
    <string name="input_phonenumber"> 输入手机号码</string>
    <string name="reset_password_tip"> 提示 : 密码请输入字母符号与数字的组合以提高安全性</string>
    <string name="input_captcha"> 请输入验证码</string>
    <string name="mycountry"> 中国+86</string>
    <string name="next"> 下一步</string>
    <string name="back"> 返回</string>
    <string name="title1"> 验证手机号码</string>
    <string name="title2"> 设置资料</string>
    <string name="title3"> 手机验证登录</string>
    <string name="takephoto"> 拍照</string>
    <string name="pickphoto"> 在相册中选择</string>
    <string name="cancel"> 取消</string>
</resources>
