<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud">

    <com.example.connectivity.MyTopbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:leftBackground="#996699"
        app:leftText="@string/back"
        app:leftTextColor="#000000"
        app:title1="@string/revise_password"
        app:title1TextColor="#000000"
        app:title1TextSize="10dp">

    </com.example.connectivity.MyTopbar>

    <TextView
        android:id="@+id/revise_password_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/newpassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/revise_password_new1"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_below="@+id/revise_password_new"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/revise_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/revise_password_new1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/revise_password_confirm1"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_below="@+id/revise_password_confirm"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/revise_password_tip"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_below="@id/revise_password_confirm1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_tip" />

    <Button
        android:clickable="true"
        android:onClick="onClick"
        android:id="@+id/revise_password_submit"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@id/revise_password_tip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#4b8de3"
        android:text="@string/submit"
        android:textSize="20sp" />

</RelativeLayout>
