<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.connectivity.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/connectivity_text3"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:text="@string/connectivity_website"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_above="@id/connectivity_text3"
        android:id="@+id/RL"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp">

        <ImageButton
            android:id="@+id/connectivity_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/touxiang" />

        <TextView
            android:id="@+id/connectivity_text"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/connectivity_logo"
            android:gravity="center"
            android:text="@string/connectivity"
            android:textSize="30sp" />

        <TextView
            android:textSize="9sp"
            android:id="@+id/connectivity_text1"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_below="@+id/connectivity_text"
            android:layout_toRightOf="@+id/connectivity_logo"
            android:gravity="center"
            android:text="@string/connectivity_text" />
    </RelativeLayout>
</RelativeLayout>
